# langgraph-redis

./: .gitignore  CLAUDE.md  MIGRATION.md  MIGRATION_0.1.0.md  MIGRATION_0.2.0.md  Makefile  README.md  pyproject.toml  scripts.py  test_jsonplus_redis_serializer.py  test_key_parsing_focus.py  test_key_parsing_suite.py
.github/workflows/: claude.yml  coverage-gist.yml  docs.yml  lint.yml  release-drafter.yml  release.yml  test.yml
benchmarks/: Makefile  README.md  checkpointer_benchmark.py  create_plots.py  pyproject.toml
docs/: conf.py  copy_notebooks.py  index.md  requirements.txt
docs/_extension/: gallery_directive.py
docs/_static/css/: custom.css
docs/_templates/: versioning.html
docs/api/: async_checkpoint_saver.rst  async_shallow_saver.rst  async_store.rst  checkpoint_saver.rst  index.md  middleware.rst  shallow_saver.rst  store.rst  utilities.rst
docs/concepts/: architecture.md  checkpointing.md  cluster.md  index.md  middleware.md  stores.md  ttl.md
docs/design/: tool-caching.md
docs/examples/: index.md
docs/user_guide/: azure_enterprise.md  checkpointers.md  getting_started.md  index.md  installation.md  message_exporter.md  middleware.md  migration.md  shallow_checkpointers.md  stores.md  ttl.md
examples/: .gitignore  Dockerfile.jupyter  README.md  create-react-agent-hitl.ipynb  create-react-agent-manage-message-history.ipynb  create-react-agent-memory.ipynb  cross-thread-persistence-functional.ipynb  cross-thread-persistence.ipynb  docker-compose.yml  persistence-functional.ipynb  subgraph-persistence.ipynb  subgraphs-manage-state.ipynb
examples/cross-thread/: cross-thread-persistence-functional.ipynb  cross-thread-persistence.ipynb
examples/functional/: persistence-functional.ipynb
examples/human_in_the_loop/: breakpoints.ipynb  dynamic_breakpoints.ipynb  edit-graph-state.ipynb  review-tool-calls-openai.ipynb  review-tool-calls.ipynb  time-travel.ipynb  wait-user-input.ipynb
examples/memory/: add-summary-conversation-history.ipynb  delete-messages.ipynb  manage-conversation-history.ipynb  semantic-search.ipynb
examples/middleware/: middleware_composition.ipynb  middleware_conversation_memory.ipynb  middleware_semantic_cache.ipynb  middleware_tool_caching.ipynb
examples/react-agent/: create-react-agent-memory.ipynb
examples/subgraph/: subgraph-persistence.ipynb
langgraph/checkpoint/redis/: __init__.py  aio.py  ashallow.py  base.py  jsonplus_redis.py  key_registry.py  message_exporter.py  shallow.py  types.py  util.py  version.py
langgraph/docs/: persistence_redis.ipynb
langgraph/middleware/: __init__.py
langgraph/middleware/redis/: __init__.py  aio.py  base.py  composition.py  conversation_memory.py  semantic_cache.py  semantic_router.py  tool_cache.py  types.py  vectorizer.py
langgraph/store/redis/: __init__.py  aio.py  base.py
scripts/: debug_conversation_memory.py
tests/: conftest.py  docker-compose.yml  test_alist_sort_order.py  test_async.py  test_async_aget_tuple_checkpoint_id.py  test_async_cluster_mode.py  test_async_cluster_mode_backup.py  test_async_search_limit.py  test_async_shallow_checkpoint_write_ttl.py  test_async_store.py  test_async_ttl_synchronization.py  test_base_client_info_and_ttl.py  test_blob_encoding_error_handling.py  test_checkpoint_filters.py  test_checkpoint_metadata_operations.py  test_checkpoint_serialization.py  test_checkpoint_ttl.py  test_cluster_mode.py  test_crossslot_integration.py  test_decode_responses.py  test_fix_verification.py  test_hitl_ttl_regression.py  test_interrupt_serialization_fix.py  test_interruption.py  test_issue_104_delete_write_keys_zset.py  test_issue_113_interrupt_serialization.py  test_issue_116_async_blob_access.py  test_issue_124_redis7_compatibility.py  test_issue_125_custom_checkpoint_prefixes.py  test_issue_128_async_store_message_serialization.py  test_issue_128_store_message_serialization.py  test_issue_133_hitl_shallow.py  test_issue_150_ashallow_adelete_thread.py  test_issue_159_aprune_keep_last.py  test_issue_162_blob_gc.py  test_issue_187_latest_pointer_prefix_isolation.py  test_issue_196_store_delete_escaping.py  test_issue_51_adelete_thread.py  test_issue_72_azure_cluster.py  test_issue_85_error_recovery.py  (+52 more)
tests/integration/: __init__.py  test_conversation_memory_integration.py  test_middleware_cache_false_hits.py  test_middleware_create_agent.py  test_middleware_end_to_end.py  test_middleware_notebook_scenarios.py  test_middleware_with_langgraph.py  test_notebook_exact_replica.py  test_responses_api_duplicate_ids.py  test_semantic_cache_provider_metadata.py
tests/sentinel/: docker-compose.yml
