[tool.poetry]
name = "checkpoint-redis-benchmarks"
version = "0.1.0"
description = "Performance benchmarks for LangGraph Redis checkpointer"
authors = ["LangGraph Team <support@langchain.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
# Core dependencies
psutil = "^6.1.0"
testcontainers = "^4.9.1"
cryptography = "^43.0.0"

# LangGraph dependencies  
langgraph = ">=0.3.0,<0.5.0"
langgraph-checkpoint = ">=2.0.26"
langgraph-checkpoint-sqlite = "^2.0.10"
langgraph-checkpoint-mongodb = "^0.1.4"
langgraph-checkpoint-mysql = {version = "^2.0.15", extras = ["aiomysql"]}

# Parent Redis implementation (local path)
langgraph-checkpoint-redis = { path = "..", develop = true }
matplotlib = ">=3.8.0"
seaborn = ">=0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"